added functionality to create posts and delete posts, as well as updated styles and added the ability to log out of the account, posts can now in addition be published immediately with a photo.